--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,39 @@ th {
 th span {
     background-color: rgb(5, 6, 45);
     border-radius: 180px;
-    margin: 2px;
+    margin: 0.25ch;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     padding: 0 4.5ch;
     width: 100%;
     height: 18ch;
+}
+
+th span div {
+    background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+    width: 8ch;
+    height: 8ch;
+    border-radius: 50%;
+    padding: 0.25ch;
+    margin: 3ch;
+    display: flex;
+    align-items: center;
+}
+
+th span div p {
+    background-color: rgb(5, 6, 45);
+    width: 8ch;
+    height: 8ch;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+th span div:hover p{
+   
+    animation: luz 1s ease-out forwards;
 }
 
 tr {
@@ -48,27 +74,26 @@ tr {
     align-self: center;
     justify-content: space-around;
     height: 16ch;
+    margin-bottom: 10ch;
 }
 
 td {
     background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
     border: 0;
-    width: 14ch;
-    height: 14ch;
+    width: 30ch;
     margin: 0.5ch;
-    border-radius: 50%;
+    border-radius: 180px;
     box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
     box-sizing: border-box;
     color: #FFFFFF;
     font-family: Phantomsans, sans-serif;
     cursor: grab;
-    padding: 0.4ch;
-    position: relative;
+    padding: 0.25ch;
 }
 
 td span {
     background-color: rgb(5, 6, 45);
-    border-radius: 50%;
+    border-radius: 180px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -76,16 +101,6 @@ td span {
 }
 
 td:hover {
-    animation: loader 2s infinite;
-}
-
-td:active {
-    animation: rotate 2s ease-out infinite;
-}
-
-
-th:hover {
-    transform: translateX(15px);
     animation: loader 2s infinite;
 }
 
@@ -109,15 +124,13 @@ th:hover {
     }
 }
 
-@keyframes rotate {
+
+@keyframes luz {
     from {
-        /*transform: rotateZ(0deg);*/
-        background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+        background-color: rgb(5, 6, 45);
     }
 
     to {
-        /*transform: rotateZ(360deg);*/
-        background-image: linear-gradient(360deg, #AF40FF, #5B42F3 50%, #00DDEB);
+        background-color: rgba(97, 6, 243, 0.582);
     }
-
 }
